# MVP

./: README.md  enderecos.csv  mvp.ipynb  pyproject.toml  requirements.txt
dados/: OM_202509051130.csv  REL_OM_CENTRALIZADA_202509051127.csv  limpeza_dados.ipynb  om_centralizada_limpo.csv  om_info_limpo.csv
dados/da/: DA2021.xlsx  quaestor_DA2019.xlsx  quaestor_DA2020.xlsx  quaestor_DA2022.xlsx  quaestor_DA2023.xlsx  quaestor_DA2024.xlsx  quaestor_DA2025.xlsx
dados/etapas/: etapas2020.xlsx  etapas2022.xlsx  etapas2024.xlsx  etapas_limpo.csv  quaestor_etapas2019.xlsx  quaestor_etapas2021.xlsx  quaestor_etapas2023.xlsx  quaestor_etapas2025.xlsx
dados/logistica/: hidrovias.shp.xml  rodovias.html  rodovias.shp.xml
dados/mmm/: mmm2020.xlsx  mmm2022.xlsx  mmm2024.xlsx  mmm2025.xlsx  mmm_limpo.csv  quaestor_mmm2019.xlsx  quaestor_mmm2021.xlsx  quaestor_mmm2023.xlsx
