[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pmdarima>=2.0.4",
    "prophet>=1.1.7",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.18.1",
    "xgboost>=3.0.4",
]
